# instant-curry

./: .gitignore  README.md  literature.md  rubric.md  syntax.md
instantcurry/: .gitignore  common.ic  dune-project  error_templates  ihs  instantcurry.opam  intest  new  new_merged  old.messages  out  run  run_all_files  run_tests  sub_test.ml  test2
instantcurry/_opam/.opam-switch/: environment  switch-config  switch-state
instantcurry/_opam/.opam-switch/install/: dune.changes  menhir.changes  menhirCST.changes  menhirLib.changes  menhirSdk.changes  ocaml-config.changes  ocaml-system.changes  ocaml.changes
instantcurry/_opam/lib/menhirCST/: menhirCST.cma  menhirCST.cmi  menhirCST.cmt  menhirCST.cmx  menhirCST.cmxa  menhirCST.cmxs  (+4 more)
instantcurry/frontend/autograder-root/: autograder.byte  autograder.js  dune-project  index.html  package-lock.json  package.json
instantcurry/frontend/src/: App.jsx  index.css
instantcurry/lib/: _dune  _eval.ml  _proof.ml  _proof2.ml  dune  eval.ml  lifting.ml  logger.ml  printing.ml  proof.ml  synint.ml  term.ml  typechecking.ml
instantcurry/parser/: dune  lexer.mll  messages.messages  messages.ml  messages_bak  parsed_ast.ml  parser.automaton  parser.mly  parserUtil.ml
instantcurry/proofs/: map_eq.ic  map_eq.ic~  map_eq2.ic  p1.ic  p1.ic~  p1~.ic  p2.ic  p3.ic  p3.ic~  p4.ic  p5.ic~  p6.ic
instantcurry/sample/: #map_result.v#  fact.ic  fact2.ic  ind_hw.ic  map.ic  maptest.ic  new_ltac.txt  silly.ic  stdlib.v  sum.ic  test.ic  test2.ic
instantcurry/test/: dune
instantcurry/trans/: _translate.ml  dune  translate.ml
(+65 files in other folders)
