(lang dune 3.17)

(using menhir 3.0)

(name instantcurry)

(generate_opam_files true)


(authors "Maite Kramarz")

(maintainers "Maite Kramarz")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name instantcurry)
 (synopsis "An educational proof assistant")
 (description "An interactive proof assistant, designed for teaching induction proofs in a functional setting.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
